--- a/nav.config.json
+++ b/nav.config.json
@@ -9,6 +9,11 @@
       "id": "Menu_SignUp",
       "nav_url": "index.php?page=Sec_Register",
       "nav_label":"<i class=\"fas fa-sign-in-alt\"></i>&nbsp;Crear Cuenta"
+    },
+    {
+      "id": "Menu_Vehiculo",
+      "nav_url": "index.php?page=Examen_VehiculoList",
+      "nav_label":"<i class=\"fas fa-table\"></i>&nbsp;WW Vehiculo"
     }
   ],
   "private": [
